--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "khata-management",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev && nodemon server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -17,6 +18,7 @@
     "mongoose": "^6.4.2",
     "next": "12.2.0",
     "next-connect": "^0.12.2",
+    "nodemon": "^2.0.18",
     "react": "18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.2.0"
